--- a/_includes/article.html
+++ b/_includes/article.html
@@ -48,7 +48,10 @@ body_class: blog-post-page-body-class # Optional class for body styling
             <a href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | absoluteUrl: metadata.url }}" target="_blank" rel="noopener noreferrer" aria-label="Share on Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://twitter.com/intent/tweet?url={{ page.url | absoluteUrl: metadata.url }}&text={{ title }}" target="_blank" rel="noopener noreferrer" aria-label="Share on Twitter"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absoluteUrl: metadata.url }}&title={{ title }}&summary={{ description }}" target="_blank" rel="noopener noreferrer" aria-label="Share on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-             <a href="mailto:?subject={{ title }}&body=Check out this article: {{ page.url | absoluteUrl: metadata.url }}" aria-label="Share via Email"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:?subject={{ title }}&body=Check out this article: {{ page.url | absoluteUrl: metadata.url }}" aria-label="Share via Email"><i class="fas fa-envelope"></i></a>
+            <button id="copy-link-button" class="copy-link-button" aria-label="Copy link to clipboard">
+                <i class="fas fa-link"></i>
+            </button>
         </div>
         <!-- Add feedback link/button here if desired -->
         <!-- <a href="/feedback/?article={{ page.url | url_encode }}" class="feedback-link">Leave Feedback</a> -->
